# QUAD_DYN

./: CMakeLists.txt  README.md
app/: Aerial_vehicle_calibration_NBEM.cpp  Batch_Fixed_Lag_Dynamics_NBEM.cpp  Batch_Opt_Dynamics_NBEM.cpp
